--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>ToDo List</title>
+    <title>Lista de tarefa</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
